--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ title: "Gray Calhoun's website"
 	    the 2012 Fall semester starts.</li>
       </ul></li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
-      <li><a href="/tweets/">Announcements and microblog</a> 
-	(<a href="/rss.xml">RSS/XML</a>)</li>
+      <li><a href="/tweets/">Announcements and site feed</a> 
+	(<a href="/rss.xml">as XML</a>)</li>
       <li><a href="/personal.html">Personal information</a> and links</li>
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
 	or <a href="index.html#Software">Software</a> (for mobile)</li>
