Renamed 'tweets' as 'clips'

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ title: "Gray Calhoun's website"
 	    the 2012 Fall semester starts.</li>
       </ul></li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
-      <li><a href="/tweets/">Announcements and site feed</a> 
+      <li><a href="/clips/">Announcements and site feed</a> 
 	(<a href="/rss.xml">as XML</a>)</li>
       <li><a href="/personal.html">Personal information</a> and links</li>
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
