--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: "Gray Calhoun's website"
       </ul></li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
       <li><a href="/clips/">Announcements and site feed</a> 
-	(<a href="/rss.xml">as XML</a>)</li>
+	(or as <a href="/rss.xml">XML</a>)</li>
       <li><a href="/personal.html">Personal information</a> and links</li>
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
 	or <a href="index.html#Software">Software</a> (for mobile)</li>
