Added link to handouts from 'information' column

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ title: "Gray Calhoun's website"
 	    the 2012 Fall semester starts.</li>
       </ul></li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
+      <li><a href="/handouts/">Handouts and blog</a></li>
       <li><a href="/clips/">Announcements and site feed</a> 
 	(or as <a href="/rss.xml">XML</a>)</li>
       <li><a href="/personal.html">Personal information</a> and links</li>
