Added pointer to cell phone number

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@ title: "Gray Calhoun's website"
       <li>Contact Information<ul>
 	  <li>467 Heady Hall (office at Iowa State)</li>
 	  <li>(515) 294-6271 (office phone)</li>
-	  <li>(858) 361-4248 (cell phone)</li>
+          <li>Mobile: email or text me for my number</li>
 	  <li><a href="mailto:{% include univ_email %}">{% include univ_email %}</a> (unviersity email)</li>
 	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email)</li>
+          <li><a href="mailto:{% include text_email %}">{% include text_email %}</a> (text messages)</li>
 	  <li>I do not have office hours in the Summer, so please email me
 	    to set up meetings. I'll start holding regular office hours when
 	    the 2012 Fall semester starts.</li>
