Changed URL scheme to add dates back in

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ title: "Gray Calhoun's website"
   <a name="Software"> </a>
   <div class="span3"><h1>Software</h1><hr>
     <p>Only stand-alone software packages are listed here.  Follow
-      this link for <a href="/papers/">source code for my publications</a>
+      this link for <a href="/research/papers/">source code for my publications</a>
       and go to the details of each working paper for that paper's source
       code.</p>
 
