Drafted webpage and syllabus for econ 671
I'm moving the syllabus and other material to this website. This commit
gives a first attempt at that material.

--- a/index.html
+++ b/index.html
@@ -28,29 +28,18 @@ title: "Gray Calhoun's website"
     <ul class="unstyled">
       <li><a href="/handouts/gcalhoun-cv.html">Curriculum Vitae</a></li>
       <li>Contact Information<ul>
-	  <li>467 Heady Hall (office at Iowa State)</li>
-	  <li>(515) 294-6271 (office phone)</li>
-          <li>Mobile: email or text me for my number</li>
+	  <li>{% include univ_office %} (office at Iowa State)</li>
+	  <li>{% include univ_phone %} (office phone)</li>
 	  <li><a href="mailto:{% include univ_email %}">{% include univ_email %}</a> (unviersity email)</li>
 	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email)</li>
-          <li><a href="mailto:{% include text_email %}">{% include text_email %}</a> (text messages)</li>
-	  <li>I do not have office hours in the Summer, so please email me
-	    to set up meetings. I'll start holding regular office hours when
-	    the 2012 Fall semester starts.</li>
+	  <li>Office hours: 11-12 Tuesday and Thursday (Fall 2012).</li>
       </ul></li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
-      <li><a href="/handouts/">Handouts and blog</a></li>
-      <li><a href="/clips/">Announcements and site feed</a> 
-	(or as <a href="/rss.xml">XML</a>)</li>
+      <li><a href="/clips/">Announcements and microblog</a> 
+	(<a href="/rss.xml">RSS/XML</a>)</li>
       <li><a href="/personal.html">Personal information</a> and links</li>
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
 	or <a href="index.html#Software">Software</a> (for mobile)</li>
-	<form method="get" action="http://www.google.com/search">
-	<li><input type="text" class="span12" name="q" maxlength="255" value="" /></li>
-	<li> <input class="btn" type="submit" 
-		  value="Search (via Google)" /></li>
-	    <input type="hidden"  name="sitesearch" value="gray.clhn.co" />
-      </form>
     </ul><hr>
   </div>
 
@@ -58,8 +47,11 @@ title: "Gray Calhoun's website"
   <div class="span3"><h1>Teaching</h1><hr>
     <ul class="unstyled">
       <li><strong>PhD Econometrics 1 (Econ 671)</strong>
-	<p>I teach PhD Econometrics 1 (Economics 671) in the Fall. Material for the 2012
-	  Fall semester will be available soon.</p></li>
+	<p>I teach PhD Econometrics 1 (Economics 671) in the Fall:
+	 <a href="/teaching/2012/econ-671.html">course
+	page</a> and
+	  <a href="/handouts/2012/econ-671-syllabus.html">syllabus</a> for
+	  2012.</p></li>
       
       <li><strong>Principles of Macroeconomics (Econ 102)</strong>
 	<p>I typically teach Principles of Macroeconomics each Spring and am
@@ -105,7 +97,7 @@ title: "Gray Calhoun's website"
   <a name="Software"> </a>
   <div class="span3"><h1>Software</h1><hr>
     <p>Only stand-alone software packages are listed here.  Follow
-      this link for <a href="/research/papers/">source code for my publications</a>
+      this link for <a href="/papers/">source code for my publications</a>
       and go to the details of each working paper for that paper's source
       code.</p>
 
