Restored homepage links

--- a/index.html
+++ b/index.html
@@ -30,16 +30,25 @@ title: "Gray Calhoun's website"
       <li>Contact Information<ul>
 	  <li>{% include univ_office %} (office at Iowa State)</li>
 	  <li>{% include univ_phone %} (office phone)</li>
+          <li>Mobile: email or text me for my number</li>
 	  <li><a href="mailto:{% include univ_email %}">{% include univ_email %}</a> (unviersity email)</li>
 	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email)</li>
+          <li><a href="mailto:{% include text_email %}">{% include text_email %}</a> (text messages)</li>
 	  <li>Office hours: 11-12 Tuesday and Thursday (Fall 2012).</li>
       </ul></li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
+      <li><a href="/handouts/">Handouts and blog</a></li>
       <li><a href="/clips/">Announcements and microblog</a> 
-	(<a href="/rss.xml">RSS/XML</a>)</li>
+	(or as <a href="/rss.xml">XML</a>)</li>
       <li><a href="/personal.html">Personal information</a> and links</li>
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
 	or <a href="index.html#Software">Software</a> (for mobile)</li>
+	<form method="get" action="http://www.google.com/search">
+	<li><input type="text" class="span12" name="q" maxlength="255" value="" /></li>
+	<li> <input class="btn" type="submit" 
+		  value="Search (via Google)" /></li>
+	    <input type="hidden"  name="sitesearch" value="gray.clhn.co" />
+      </form>
     </ul><hr>
   </div>
 
@@ -97,7 +106,7 @@ title: "Gray Calhoun's website"
   <a name="Software"> </a>
   <div class="span3"><h1>Software</h1><hr>
     <p>Only stand-alone software packages are listed here.  Follow
-      this link for <a href="/papers/">source code for my publications</a>
+      this link for <a href="/research/papers/">source code for my publications</a>
       and go to the details of each working paper for that paper's source
       code.</p>
 
