Added xmpp im to main page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: "Gray Calhoun's website"
 	  <li>{% include univ_office %} (office at Iowa State)</li>
 	  <li>{% include univ_phone %} (office phone)</li>
 	  <li><a href="mailto:{% include univ_email %}">{% include univ_email %}</a> (unviersity email)</li>
-	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email)</li>
+	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email and IM)</li>
 	  <li>Office hours: 11-12 Tuesday and Thursday (Fall 2012).</li>
       </ul></li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
