Added preliminary news aggregators
I've added commands to generate news feeds using rawdog. There's still
a lot to be done.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ title: "Gray Calhoun's website"
       <li><a href="/clips/">Announcements and microblog</a> 
 	(or as <a href="/rss.xml">XML</a>)</li>
       <li><a href="/personal.html">Personal information</a> and links</li>
+      <li><a href="/rivers/index.html">News aggregators</a></li>
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
 	or <a href="index.html#Software">Software</a> (for mobile)</li>
     </ul><hr>
