Moved some of the news rivers to a private directory
I'm not entirely sure about the copyright aspects of republishing rss feeds,
so I'll move the stuff that's just for my own entertainment to a password
protected directory for now.

--- a/_rawdog/template_private.html
+++ b/_rawdog/template_private.html
@@ -25,7 +25,12 @@
       <div class="span3">
 	<ul>
 	  <li><a href="/rivers/announcements.html" data-toggle="tab">Academic announcements</a></li>
+	  <li><a href="/private/music.html">Music</a></li>
+	  <li><a href="/private/news.html">News</a></li>
+	  <li><a href="/private/pictures.html">Pictures</a></li>
 	  <li><a href="/rivers/research.html">Research publications</a></li>
+	  <li><a href="/private/sports.html">Sports</a></li>
+	  <li><a href="/private/tech.html">Tech</a></li>
 	  <li><a href="/rivers/working.html">Working papers</a></li>
 	</ul>
       </div>
