--- a/_rawdog/private/index.html
+++ b/_rawdog/private/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="/assets/ico/apple-touch-icon-57-precomposed.png">
-    <title>gray.clhn.co: __pagetitle__</title>
+    <title>gray.clhn.co: Aggregated news</title>
 </head>
 <body id="rawdog">
 
@@ -19,18 +19,23 @@
     <div class="row">
       <div class="span6 offset3">
 	<div class="page-header" align = "center">
-	  <h1>__pagetitle__</h1>
+	  <h1>Aggregated news</h1>
     </div></div></div>
     <div class="row">
       <div class="span3">
 	<ul>
-	  <li><a href="/rivers/announcements.html" data-toggle="tab">Academic announcements</a></li>
-	  <li><a href="/rivers/research.html">Research publications</a></li>
-	  <li><a href="/rivers/working.html">Working papers</a></li>
+	  <li><a href="/private/music.html">Music</a></li>
+	  <li><a href="/private/news.html">News</a></li>
+	  <li><a href="/private/pictures.html">Pictures</a></li>
+	  <li><a href="/private/sports.html">Sports</a></li>
+	  <li><a href="/private/tech.html">Tech</a></li>
 	</ul>
       </div>
       <div id="items" class="span6">
-	__items__
+	I'm in the process of setting up a few news aggregators,
+	i.e. the links on the left of the page. They'll be updated
+	sporadically while I get it set up. Please let me know if you
+	have any suggestions or requests.
       </div>
     </div>
   </div> <!-- /container -->
