Added a section for econ and political blogs

--- a/_rawdog/template_private.html
+++ b/_rawdog/template_private.html
@@ -25,9 +25,11 @@
       <div class="span3">
 	<ul>
 	  <li><a href="/rivers/announcements.html" data-toggle="tab">Academic announcements</a></li>
+	  <li><a href="/private/econ.html">Econ blogs</a></li>
 	  <li><a href="/private/music.html">Music</a></li>
 	  <li><a href="/private/news.html">News</a></li>
 	  <li><a href="/private/pictures.html">Pictures</a></li>
+	  <li><a href="/private/politics.html">Politics (D)</a></li>
 	  <li><a href="/rivers/research.html">Research publications</a></li>
 	  <li><a href="/private/sports.html">Sports</a></li>
 	  <li><a href="/private/tech.html">Tech</a></li>
