--- a/_rawdog/private/index.html
+++ b/_rawdog/private/index.html
@@ -24,9 +24,11 @@
     <div class="row">
       <div class="span3">
 	<ul>
+	  <li><a href="/private/econ.html">Econ blogs</a></li>
 	  <li><a href="/private/music.html">Music</a></li>
 	  <li><a href="/private/news.html">News</a></li>
 	  <li><a href="/private/pictures.html">Pictures</a></li>
+	  <li><a href="/private/politics.html">Politics (D)</a></li>
 	  <li><a href="/private/sports.html">Sports</a></li>
 	  <li><a href="/private/tech.html">Tech</a></li>
 	</ul>
