Added and removed some feeds
There's now a feed for econometric links (via feed43) and I removed some
of the twitter feeds since they were updated too often.

--- a/_rawdog/itemtemplate.html
+++ b/_rawdog/itemtemplate.html
@@ -1,8 +1,8 @@
 <div class="item feed-__feed_hash__ feed-__feed_id__" id="item-__hash__">
-<h2>__title__ [__feed_title__]</h2>
-
+<h1>__title__</h1>
 __if_description__<div class="itemdescription">
 __description__
 </div>__endif__
+<h2>From __feed_title____if_date__ on __date____endif__. Retrieved on __added__</h2>
 <hr>
 </div>
