Updated tumblr link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: "Gray Calhoun's website"
       <li><a href="/research/talks/">Presentations</a> with slides</li>
       <li><a href="/handouts/">Handouts</a></li>
       <li><a href="/clips/">Announcements</a> (or as <a href="/rss.xml">XML</a>)</li>
-      <li><a href="http://graycalhoun.tumblr.com">Tumblr</a> (internet lost and found)</li>
+      <li><a href="http://www.pseudotrue.com">Tumblr</a></li>
       <li><a href="/personal.html">Personal information</a> and links</li>
       <!--<li><a href="/rivers/index.html">News aggregators</a></li>-->
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
