--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: "Gray Calhoun's website"
 
 <div class="row-fluid">
   <div class="span3">  <a name="Information"> </a>
-    <h1>Information</h1><hr> <p>I'm Gray Calhoun, an Assistant
+    <h1 align="center">Information</h1><hr> <p>I'm Gray Calhoun, an Assistant
     Professor in the Economics Department at Iowa State.  I work on
     Econometric theory, especially time series and applications to
     forecasting and forecast evaluation.  I graduated with a PhD from
@@ -32,21 +32,21 @@ title: "Gray Calhoun's website"
 	  <li>{% include univ_phone %} (office phone)</li>
 	  <li><a href="mailto:{% include univ_email %}">{% include univ_email %}</a> (unviersity email)</li>
 	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email and IM)</li>
+	  <li><a href="https://twitter.com/gfcal">@gfcal</a> (Twitter)</li>
 	  <li>Office hours: 11-12 Tuesday and Thursday (Fall 2012).</li>
       </ul></li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
-      <li><a href="/handouts/">Handouts</a></li>
-      <li><a href="/clips/">Announcements</a> (or as <a href="/rss.xml">XML</a>)</li>
-      <li><a href="http://www.pseudotrue.com">Tumblr</a></li>
+      <li><a href="/handouts/">Handouts</a> for classes, etc.</li>
+      <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li><a href="/personal.html">Personal information</a> and links</li>
-      <!--<li><a href="/rivers/index.html">News aggregators</a></li>-->
+      <li>Blog: <a href="http://www.pseudotrue.com">www.pseudotrue.com</a></li>
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
 	or <a href="index.html#Software">Software</a> (for mobile)</li>
     </ul><hr>
   </div>
 
   <a name="Teaching"> </a>
-  <div class="span3"><h1>Teaching</h1><hr>
+  <div class="span3"><h1 align="center">Teaching</h1><hr>
     <ul class="unstyled">
       <li><strong>PhD Econometrics 1 (Econ 671)</strong>
 	<p>I teach PhD Econometrics 1 (Economics 671) in the Fall:
@@ -71,7 +71,7 @@ title: "Gray Calhoun's website"
 
   <a name="Research"> </a>
   <div class="span3">
-    <h1>Research</h1><hr>
+    <h1 align="center">Research</h1><hr>
     <h2>Publications:</h2>
     <ul class="unstyled">
       <li><p><a href="/research/papers/"><strong>Published papers</strong></a>, 
@@ -97,7 +97,7 @@ title: "Gray Calhoun's website"
   </div>
 
   <a name="Software"> </a>
-  <div class="span3"><h1>Software</h1><hr>
+  <div class="span3"><h1 align="center">Software</h1><hr>
     <p>Only stand-alone software packages are listed here.  Follow
       this link for <a href="/research/papers/">source code for my publications</a>
       and go to the details of each working paper for that paper's source
