Tweaked a few links

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@ title: "Gray Calhoun's website"
 	  <li><a href="https://twitter.com/gfcal">@gfcal</a> (Twitter)</li>
 	  <li>Office hours: 11-12 Tuesday and Thursday (Fall 2012).</li>
       </ul></li>
-      <li><a href="/research/talks/">Presentations</a> with slides</li>
-      <li><a href="/handouts/">Handouts</a> for classes, etc.</li>
-      <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li><a href="/personal.html">Personal information</a> and links</li>
-      <li>Blog: <a href="http://www.pseudotrue.com">www.pseudotrue.com</a></li>
+      <li><a href="http://www.pseudotrue.com">www.pseudotrue.com</a> (blog)</li>
+      <li><a href="/handouts/">Handouts</a> for classes, etc.</li>
+      <li><a href="/research/talks/">Presentations</a> with slides</li>
+      <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
 	or <a href="index.html#Software">Software</a> (for mobile)</li>
     </ul><hr>
