Fixed wording for blog

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: "Gray Calhoun's website"
 	  <li>Office hours: 11-12 Tuesday and Thursday (Fall 2012).</li>
       </ul></li>
       <li><a href="/personal.html">Personal information</a> and links</li>
-      <li><a href="http://www.pseudotrue.com">www.pseudotrue.com</a> (blog)</li>
+      <li><a href="http://www.pseudotrue.com">www.pseudotrue.com</a>, my blog</li>
       <li><a href="/handouts/">Handouts</a> for classes, etc.</li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
       <li><a href="/rss.xml">Site feed</a> (as XML)</li>
