Changed twitter account to @pseut

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: "Gray Calhoun's website"
 	  <li>{% include univ_phone %} (office phone)</li>
 	  <li><a href="mailto:{% include univ_email %}">{% include univ_email %}</a> (unviersity email)</li>
 	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email and IM)</li>
-	  <li><a href="https://twitter.com/gfcal">@gfcal</a> (Twitter)</li>
+	  <li><a href="https://twitter.com/pseut">@pseut</a> (Twitter)</li>
 	  <li>Office hours: 11-12 Tuesday and Thursday (Fall 2012).</li>
       </ul></li>
       <li><a href="/personal.html">Personal information</a> and links</li>
