Added syllabus for econ 674

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ title: "Gray Calhoun's website"
 	
       <li><strong>PhD Macroeconometrics (Econ 674)</strong>
 	<p>Helle Bunzel and I will teach PhD Macroeconometrics (Economics 674) in
-	  Spring, 2013. I’ll post information and material for that class as I
-	  develop it.</p></li>
+	  Spring, 2013.  <a href="/hamdouts/2013/econ-674-syllabus.html">The syllabus 
+          is available here</a>.</p></li>
 
       <li><p><strong>Courses before Fall, 2012</strong> are not online. Please
 	contact me if you need material.  A few <a href="/handouts">handouts</a> are available.</p></li>
