Added syllabus and links for econ 102

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: "Gray Calhoun's website"
 	  <li><a href="mailto:{% include univ_email %}">{% include univ_email %}</a> (unviersity email)</li>
 	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email and IM)</li>
 	  <li><a href="https://twitter.com/pseut">@pseut</a> (Twitter)</li>
-	  <li>Office hours: 11-12 Tuesday and Thursday (Fall 2012).</li>
+	  <li>Office hours: 3-4 Monday and Wednesday (Spring 2013).</li>
       </ul></li>
       <li><a href="/personal.html">Personal information</a> and links</li>
       <li><a href="http://www.pseudotrue.com">www.pseudotrue.com</a>, my blog</li>
@@ -56,9 +56,11 @@ title: "Gray Calhoun's website"
 	  2012.</p></li>
       
       <li><strong>Principles of Macroeconomics (Econ 102)</strong>
-	<p>I typically teach Principles of Macroeconomics each Spring and am
-	  scheduled to teach it again in Spring, 2013. I’ll put relevant
-	  material here as we get closer.</p></li>
+	<p>I am teaching Principles of Macroeconomics (Econ 102) in Spring,
+	  2013.  Course material is on
+	  <a href="https://bb.its.iastate.edu">BlackBoard Learn</a>, but the
+	  <a href="/handouts/2013/econ-102-syllabus.html">syllabus</a> is on this
+	  website as well.</p></li>
 	
       <li><strong>PhD Macroeconometrics (Econ 674)</strong>
 	<p>Helle Bunzel and I will teach PhD Macroeconometrics (Economics 674) in
