--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ title: "Gray Calhoun's website"
     <hr>
     <ul class="unstyled">
       <li><a href="/handouts/gcalhoun-cv.html">Curriculum Vitae</a></li>
+      <li><a href="http://www.pseudotrue.com">pseudotrue.com</a> (my blog)</li>
       <li>Contact Information<ul>
 	  <li>{% include univ_office %} (office at Iowa State)</li>
 	  <li>{% include univ_phone %} (office phone)</li>
@@ -35,10 +36,9 @@ title: "Gray Calhoun's website"
 	  <li><a href="https://twitter.com/pseut">@pseut</a> (Twitter)</li>
 	  <li>Office hours: 3-4 Monday and Wednesday (Spring 2013).</li>
       </ul></li>
-      <li><a href="/personal.html">Personal information</a> and links</li>
-      <li><a href="http://www.pseudotrue.com">www.pseudotrue.com</a>, my blog</li>
       <li><a href="/handouts/">Handouts</a> for classes, etc.</li>
       <li><a href="/research/talks/">Presentations</a> with slides</li>
+      <li><a href="/personal.html">Personal information</a> and links</li>
       <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li>Jump to <a href="index.html#Teaching">Teaching</a>, <a href="index.html#Research">Research</a>, 
 	or <a href="index.html#Software">Software</a> (for mobile)</li>
