--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@ title: "Gray Calhoun's website"
     <ul class="unstyled">
       <li><a href="/cv">Curriculum Vitae</a></li>
       <li><a href="http://www.pseudotrue.com">www.pseudotrue.com</a> (my blog)</li>
-      <li><a href="/blog">Other notes</a> (to be merged sometime)</li>
       <li><a href="/about">Personal information</a> and links</li>
-      <li><a href="/rss.xml">Site feed</a> (as XML) and
-	<a href="/102/rss.xml">Econ 102 feed</a></li>
+      <li><a href="/notes">Other documents and notes</a></li>
+      <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li>Jump to <a href="/#Teaching">Teaching</a>, <a href="/#Research">Research</a>, 
 	or <a href="/#Software">Software</a> (for mobile)</li>
       <li><h3>Contact Information</h3><ul>
@@ -91,7 +90,7 @@ title: "Gray Calhoun's website"
       <li><p> <strong>{{ doc.title }}</strong>. {{ doc.info }}
 	  <ul><li><a href="{{ doc.url }}">More details</a></li>
 	    <li><a href="{{ doc.link }}">Download the paper</a> 
-	      (external link)</li></ul>
+	      </li></ul>
       </p></li>
       {% endif %}{% endfor %}
     </ul>
