Tweak working on main page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: "Gray Calhoun's website"
       <li><a href="/cv">Curriculum Vitae</a></li>
       <li><a href="http://www.pseudotrue.com">www.pseudotrue.com</a> (my blog)</li>
       <li><a href="/about">Personal information</a> and links</li>
-      <li><a href="/notes">Other documents and notes</a></li>
+      <li><a href="/notes">Informal documents and notes</a></li>
       <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li>Jump to <a href="/#Teaching">Teaching</a>, <a href="/#Research">Research</a>, 
 	or <a href="/#Software">Software</a> (for mobile)</li>
