--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: "Gray Calhoun's website"
     <hr>
     <ul class="unstyled">
       <li><a href="/cv">Curriculum Vitae</a></li>
-      <li><a href="http://www.pseudotrue.com">www.pseudotrue.com</a> (my blog)</li>
+      <li><a href="http://pseudotrue.com">pseudotrue.com</a> (my blog)</li>
       <li><a href="/about">Personal information</a> and links</li>
       <li><a href="/notes">Informal documents and notes</a></li>
       <li><a href="/rss.xml">Site feed</a> (as XML)</li>
