Update links to other websites

--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@ title: "Gray Calhoun's website"
     <hr>
     <ul class="unstyled">
       <li><a href="/cv">Curriculum Vitae</a></li>
-      <li><a href="http://pseudotrue.com">pseudotrue.com</a> (my blog)</li>
-      <li><a href="/about">Personal information</a> and links</li>
-      <li><a href="/notes">Informal documents and notes</a></li>
       <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li>Jump to <a href="/#Teaching">Teaching</a>, <a href="/#Research">Research</a>, 
 	or <a href="/#Software">Software</a> (for mobile)</li>
@@ -40,6 +37,13 @@ title: "Gray Calhoun's website"
 	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email and IM)</li>
 	  <li><a href="https://twitter.com/pseut">@pseut</a> (Twitter)</li>
 	  <li>Office hours: 3-4 Monday and Wednesday (Spring 2013).</li>
+      </ul></li>
+      <li><h3>Other links</h3><ul>
+	  <li><a href="/about">Personal information</a></li>
+	  <li><a href="/notes">Informal documents and notes</a></li>
+	  <li><a href="http://pseudotrue.com">pseudotrue.com</a> (my blog)</li>
+	  <li><a href="http://visualscoreboard.com">visualscoreboard.com</a> (sports statistical graphics)</li>
+	  <li><a href="http://www.econometricslibrary.org">Econometrics Free Library Project</a> (textbook development)</li>
       </ul></li>
     </ul><hr>
   </div>
