Another website tweak

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: "Gray Calhoun's website"
 	  <li>Office hours: 3-4 Monday and Wednesday (Spring 2013).</li>
       </ul></li>
       <li><h3>Other links</h3><ul>
-	  <li><a href="/about">Personal information</a></li>
+	  <li><a href="/about">Personal information</a> and links</li>
 	  <li><a href="/notes">Informal documents and notes</a></li>
 	  <li><a href="http://pseudotrue.com">pseudotrue.com</a> (my blog)</li>
 	  <li><a href="http://visualscoreboard.com">visualscoreboard.com</a> (sports statistical graphics)</li>
