Update github url and twitter handle
I changed my twitter id and github id; this patch updates the website
to use the new ids.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: "Gray Calhoun's website"
       <li><a href="/about">Personal information</a> and links</li>
       <li><a href="http://www.econometricslibrary.org">Econometrics Free Library Project</a> (textbook development)</li>
       <li><a href="http://visualscoreboard.com">visualscoreboard.com</a> (sports statistical graphics)</li>
-      <li><a href="https://github.com/gcalhoun">Software</a> (on GitHub).</li>
+      <li><a href="https://github.com/grayclhn">Software</a> (on GitHub).</li>
       <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li>Jump to <a href="/#Teaching">Teaching</a>,
 	<a href="/#Research">Research</a> or
@@ -39,7 +39,8 @@ title: "Gray Calhoun's website"
 	  <li>{% include univ_phone %} (office phone)</li>
 	  <li><a href="mailto:{% include univ_email %}">{% include univ_email %}</a> (unviersity email)</li>
 	  <li><a href="mailto:{% include main_email %}">{% include main_email %}</a> (all other email and IM)</li>
-	  <li><a href="https://twitter.com/pseut">@pseut</a> (Twitter)</li>
+	  <li>@grayclhn (<a href="https://twitter.com/grayclhn">Twitter</a>, 
+	    <a href="https://github.com/grayclhn">GitHub</a>, etc.)</li>
 	  <li>Office hours: by appointment (Summer 2013).</li>
       </ul></li>
     </ul><hr>
