Move around urls for external projects
I've moved visualscoreboard off the front page and
added pseudotrue.com to the second page.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ title: "Gray Calhoun's website"
     <ul class="unstyled">
       <li><a href="/cv">Curriculum Vitae</a></li>
       <li><a href="/about">Personal information</a> and links</li>
-      <li><a href="http://www.econometricslibrary.org">Econometrics Free Library Project</a> (textbook development)</li>
-      <li><a href="http://visualscoreboard.com">visualscoreboard.com</a> (sports statistical graphics)</li>
+      <li><a href="http://www.econometricslibrary.org">Econometrics 
+	  Free Library Project</a> (textbook development)</li>
       <li><a href="https://github.com/grayclhn">Software</a> (on GitHub).</li>
       <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li>Jump to <a href="/#Teaching">Teaching</a>,
