--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@ title: "Gray Calhoun's website"
     <ul class="unstyled">
       <li><a href="/cv">Curriculum Vitae</a></li>
       <li><a href="/about">Personal information</a> and links</li>
+      <li><a href="http://pseudotrue.com">Pseudotrue.com</a> (blog).</li>
       <li><a href="http://www.econometricslibrary.org">Econometrics 
 	  Free Library Project</a> (textbook development)</li>
       <li><a href="https://github.com/grayclhn">Software</a> (on GitHub).</li>
       <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li>Jump to <a href="/#Teaching">Teaching</a>,
 	<a href="/#Research">Research</a> or
-	<a href="/#Blog">Blog</a> (for mobile)</li>
+	<a href="/#Blog">News</a> (for mobile)</li>
       <li><h3>Contact Information</h3><ul>
 	  <li>{% include univ_office %} (office at Iowa State)</li>
 	  <li>{% include univ_phone %} (office phone)</li>
@@ -101,12 +102,12 @@ title: "Gray Calhoun's website"
 
   <a name="Blog"> </a>
   <div class="span3">
-    <h1 align="center">Blog</h1><hr>
+    <h1 align="center">News and handouts</h1><hr>
     <h2>Handouts:</h2>
     <ul class="unstyled">
       {% assign handout_count = '' %}
       {% for doc in site.categories.blog %}
-      {% if doc.tags contains 'handout' and handout_count.size < 4 %}
+      {% if doc.tags contains 'handout' and handout_count.size < 20 %}
 
       <!--Increment counter-->
       {% capture temp %}{{ handout_count }}*{% endcapture %}
@@ -117,14 +118,14 @@ title: "Gray Calhoun's website"
       {% endif %}
       {% endfor %}
       <li><p><b><a href="/blog">The full archives are available
-      here</a></b>, the four latest handouts are listed above.</p></li>
+      here</a></b>, the latest handouts are listed above.</p></li>
     </ul>
     <hr>
-    <h2>Blog posts:</h2>
+    <h2>Announcements:</h2>
     <ul class="unstyled">
       {% assign blog_count = '' %}
       {% for doc in site.categories.blog %}
-      {% unless doc.tags contains 'handout' or blog_count.size > 7 %}
+      {% unless doc.tags contains 'handout' or blog_count.size > 20 %}
 
       <!-- Increment counter -->
       {% capture temp %}{{ blog_count }}*{% endcapture %}
@@ -135,7 +136,7 @@ title: "Gray Calhoun's website"
       {% endunless %}
       {% endfor %}
       <li><p><b><a href="/blog">The full archives are available
-      here</a></b>, the eight latest posts are listed above.</p></li>
+      here</a></b>, the latest posts are listed above.</p></li>
      </ul>
     <hr>
   </div>
