--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: "Gray Calhoun's website"
       <li><a href="/rss.xml">Site feed</a> (as XML)</li>
       <li>Jump to <a href="/#Teaching">Teaching</a>,
 	<a href="/#Research">Research</a> or
-	<a href="/#Blog">News</a> (for mobile)</li>
+	<a href="/#Blog">Announcements and handouts</a> (for mobile)</li>
       <li><h3>Contact Information</h3><ul>
 	  <li>{% include univ_office %} (office at Iowa State)</li>
 	  <li>{% include univ_phone %} (office phone)</li>
@@ -102,7 +102,7 @@ title: "Gray Calhoun's website"
 
   <a name="Blog"> </a>
   <div class="span3">
-    <h1 align="center">News and handouts</h1><hr>
+    <h1 align="center">News, etc.</h1><hr>
     <h2>Handouts:</h2>
     <ul class="unstyled">
       {% assign handout_count = '' %}
