Update homepage for econ102, spring 2014
This commit adds links to the new syllabus.

--- a/index.html
+++ b/index.html
@@ -50,27 +50,28 @@ title: "Gray Calhoun's website"
   <a name="Teaching"> </a>
   <div class="span3"><h1 align="center">Teaching</h1><hr>
     <ul class="unstyled">
+
+      <li><strong>Principles of Macroeconomics (Econ 102)</strong>
+	<p>I am teaching two sections of Principles of Macroeconomics
+	  (Econ 102) in Spring, 2014.  Course material is on
+	  <a href="https://bb.its.iastate.edu">BlackBoard Learn</a>,
+	  and the syllabus is on this website as well:
+          <a href="/102/2014/syllabus-3">section 3</a> and
+          <a href="/102/2013/syllabus-4">section 4</a>.</p></li>
+
       <li><strong>PhD Econometrics 1 (Econ 671)</strong>
 	<p>I teach PhD Econometrics 1 (Economics 671) in the Fall:
 	 <a href="/671">course page</a> and
 	  <a href="/671/2013/syllabus">syllabus</a> for 2013.</p></li>
-      
-      <li><strong>Principles of Macroeconomics (Econ 102)</strong>
-	<p>I am teaching Principles of Macroeconomics (Econ 102) in Spring,
-	  2013.  Course material is on
-	  <a href="https://bb.its.iastate.edu">BlackBoard Learn</a>, but the
-	  <a href="/102/2013/syllabus">syllabus</a> is on this website
-	  as well.  <a href="/102/rss.xml">This RSS feed has new
-	  handouts</a>.</p></li>
-	
+      	
       <li><strong>PhD Macroeconometrics (Econ 674)</strong>
 	<p>Helle Bunzel and I will teach PhD Macroeconometrics
 	  (Economics 674) in Spring,
 	  2013.  <a href="/674/2013/syllabus">The syllabus is
 	  available here</a>.</p></li>
 
-      <li><p><strong>Courses before Fall, 2012</strong> are not
-	online. Please contact me if you need material.</p></li>
+      <li><p><strong>Other past classes</strong> are not online. Please
+	contact me if you need that material.</p></li>
     </ul><hr></div>
 
   <a name="Research"> </a>
